0.87_dev
-update interface to address issue in move method when get_fps return zero.
-add interface.is_panel_display to check panel controls displayed.
-update interface.set_panel_display to ensure display updates.
-update interface.move to properly access panel size.

0.87    2015-04-12
-update Text.tprint to use rendered character cache.
-refactor module to isolate framework.
-update module for alternate framework, can use Pygame, PyJ2D, or Pyjsdl.
-add interphase.init and interphase.get_init to initialize module.
-add textbox clipboard functionality for PyJ2D and Pyjsdl via pyjsdl.display.textarea.
-update textbox.get_text to properly return text.
-update interface to maintain control hold if pointer moves off control.
-add interface process_event and get_event_queue methods.
-add scroll wheel functionality, activated with interface parameter scroll_button.
-update scroll config for numeric control.
-update interface scroll_button to use hashset when set not available in earlier jython releases.
-released under MIT license.

0.86    2014-02-27
-updated Text.tprint multiline print on background color.
-updated Control to cache rendered text.
-changed license from GPL to LGPL.

0.85    2013-04-03
-updated Interface.panel_update to move event generation from InterfaceState.
-updated Interface.set_label_display and Interface.panel_update to ensure panel update.
-updated Text.tprint to adjust text position.

0.84    2012-03-01
-transferred clipboard functions to Interface
-added Interface methods clipboard_get and clipboard_set
-added Interface methods draw and clear
-refactoring of Control objects
-generated documentation with epydoc

0.83    2012-02-26
-changed interface update for performance
-added interface is_update and  to check update, limiting panel redraw on screen
-added interface set_update manually change panel update, that triggers either _force_update or sets to sustained updates until unset